--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 <body>
 	<div class="wrapper">
-	<form action="#">
+	<form action="form">
 		<label>ABOUT</label>
 		<textarea>Write me</textarea>
 		<select>
